--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="zh-hans-CN">
   <head>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
     <meta content="width=device-width,initial-scale=1,user-scalable=no" name="viewport" />
